<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mackoandyelomartinezgmail.oryzaapp.TabFragmentation.SacksFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView6"
            android:layout_marginTop="17dp"
            android:background="@color/colorAccent"
            app:cardBackgroundColor="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/push_button14"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_14"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button15"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_15"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button13"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_13"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView5"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:cardBackgroundColor="@color/colorAccent"
            android:id="@+id/cardView6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/push_button11"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_11"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button12"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_12"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button10"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_10"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView4"
            android:layout_marginTop="21dp"
            android:background="@color/colorAccent"
            app:cardBackgroundColor="@color/colorAccent"
            android:id="@+id/cardView5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/push_button8"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_8"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button9"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_9"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button7"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_7"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView3"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            app:cardBackgroundColor="@color/colorAccent"
            android:id="@+id/cardView4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/push_button5"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_5"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button6"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_6"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button4"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_4"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="@color/black_overlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="dry"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="84dp"
                    app:srcCompat="@drawable/normal" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView5"
                    android:layout_alignBottom="@+id/textView5"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:text="normal"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView3"
                    android:layout_marginStart="19dp"
                    android:layout_toEndOf="@+id/textView3"
                    app:srcCompat="@drawable/dry" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView4"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/textView4"
                    app:srcCompat="@drawable/wet" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/imageView6"
                    android:text="wet"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="15sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView"
            android:layout_marginTop="18dp"
            android:background="@color/colorAccent"
            app:cardBackgroundColor="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/push_button1"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_2"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button2"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_3"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/push_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/buttonradius"
                    android:defaultFocusHighlightEnabled="false"
                    android:padding="15dp"
                    android:text="@string/sackValue_1"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</FrameLayout>
