<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="420dp"
              android:background="@color/black_overlay"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:layout_alignParentStart="true">

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:defaultFocusHighlightEnabled="true"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textAlignment="gravity"
                app:srcCompat="@drawable/dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:layout_toEndOf="@+id/imageView"
                android:fontFamily="@font/productsansbold"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="MAP MARTINEZ"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:visibility="visible"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/frameLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_above="@+id/text_temp1"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/logooryza"/>

                <TextView
                    android:id="@+id/text_temp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/productsansitalic"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/power_by"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/text_temp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/text_temp3"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/productsansbolditalic"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/project_oryza"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/text_temp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/text_temp5"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/productsansitalic"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/for_"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/text_temp4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/text_temp5"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/productsansbolditalic"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/DPRM"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/text_temp5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/productsansbold"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/version"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/imageView2"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="100dp"
                    android:fontFamily="@font/productsansregular"
                    android:text="mapmartinez@neu.edu.ph"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="visible"/>

            </RelativeLayout>
        </FrameLayout>


    </RelativeLayout>

</LinearLayout>
